force-app/main/default/objects/ServiceHistory__c/ServiceHistory__c.object-meta.xml
<CustomObject>
    <description>Armazena durante o dia corrente o resultado da consulta do Histórico de Contato dos clientes posicionados.</description>
    <label>Histórico de Contato</label>
    <nameField>
        <label>Histórico do Contato</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Histórico de Contatos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>