force-app/main/default/objects/ServiceHistory__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ContactHistory</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>