force-app/main/default/objects/ServiceHistory__c/fields/ContactReason__c.field-meta.xml
<CustomField>
    <fullName>ContactReason__c</fullName>
    <label>Motivo do Contato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>