force-app/main/default/objects/ServiceHistory__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Data fim da interação.</description>
    <label>Data de Finalização</label>
    <type>DateTime</type>
</CustomField>