force-app/main/default/objects/ServiceHistory__c/fields/LegacyCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>LegacyCaseNumber__c</fullName>
    <label>Protocolo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>