force-app/main/default/objects/ServiceHistory__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Data de inicio da interação.</description>
    <label>Data de Abertura</label>
    <type>DateTime</type>
</CustomField>